--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
+  background-image: url(../images/bg-intro-mobile.png);
+  background-color: var(--red);
 }
 
 :root{
