--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+html, body, #root{
+  height: 100%;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
